# rssfeed

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.c  html.c  html.h  main.c  xml.c  xml.h
include/: config.h  html.h  utils.h
src/: CMakeLists.txt  utils.c  xml.c
